--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="textUtils.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a is word counter and a character counting utility which can be manipulate your text in the way you want. You can remove extra spaces, Copy and manipulated text as well as convert your text from uppercase to lowercase and lowercase to uppercase."
+      content="TextTransform is a is word counter and a character counting utility which can be manipulate your text in the way you want. You can remove extra spaces, Copy and manipulated text as well as convert your text from uppercase to lowercase and lowercase to uppercase."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
 
@@ -19,7 +18,7 @@
       crossorigin="anonymous"
     />
 
-    <title>TextUtils - Word Counter | Character Counter | LowerCase To UpperCase | UpperCase To LowerCase | Remove Extra Spaces</title>
+    <title>TextTransform - Word Counter | Character Counter | LowerCase To UpperCase | UpperCase To LowerCase | Remove Extra Spaces</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
